@@ -1,3 +1,8 @@
+2004-11-22  Sam Steingold  <sds@gnu.org>
+
+	* m4/regexp.m4 (CL_REGEXP): check for regoff_t and treat rm_so &
+	rm_eo as regoff_t (which may be 64-bit!)
+
 2004-11-21  Bruno Haible  <bruno@clisp.org>
 
 	Make FRESH-LINE work correctly in batch-mode when stdout and stderr
